// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionDataErrorSummary > displays errors from form DOM structure > action-data-error-summary-with-errors 1`] = `
<html>
  <head />
  <body>
    <input
      aria-errormessage="username-error"
      id="username"
    />
    <div
      id="username-error"
    >
      Username required
    </div>
    <div>
      <div>
        <section
          class="my-5 border-4 border-red-600 p-4"
          role="alert"
          tabindex="-1"
        >
          <h2
            class="font-lato text-lg font-semibold"
          >
            There is 1 error
          </h2>
          <ol
            class="mt-1.5 list-decimal space-y-2 pl-7"
          >
            <li>
              <a
                class="text-red-700 underline hover:decoration-2 focus:decoration-2"
                href="#username"
              >
                Username required
              </a>
            </li>
          </ol>
        </section>
        <form>
          <input
            aria-errormessage="username-error"
            id="username"
          />
        </form>
      </div>
    </div>
  </body>
</html>
`;

exports[`ActionDataErrorSummary > does not display errors if no invalid inputs in DOM > action-data-error-summary-no-errors 1`] = `
<html>
  <head />
  <body>
    <div>
      <div>
        <form>
          <input
            id="foo"
          />
        </form>
      </div>
    </div>
  </body>
</html>
`;

exports[`ErrorSummary > renders error summary with a single error > renders-single-error 1`] = `
<html>
  <head />
  <body>
    <div>
      <section
        class="my-5 border-4 border-red-600 p-4"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="font-lato text-lg font-semibold"
        >
          There is 1 error
        </h2>
        <ol
          class="mt-1.5 list-decimal space-y-2 pl-7"
        >
          <li>
            <a
              class="text-red-700 underline hover:decoration-2 focus:decoration-2"
              href="#email"
            >
              Email is invalid
            </a>
          </li>
        </ol>
      </section>
    </div>
  </body>
</html>
`;

exports[`ErrorSummary > renders error summary with multiple errors > renders-multiple-errors 1`] = `
<html>
  <head />
  <body>
    <div>
      <section
        class="my-5 border-4 border-red-600 p-4 custom-class"
        data-testid="error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="font-lato text-lg font-semibold"
        >
          There are 2 errors
        </h2>
        <ol
          class="mt-1.5 list-decimal space-y-2 pl-7"
        >
          <li>
            <a
              class="text-red-700 underline hover:decoration-2 focus:decoration-2"
              href="#first-name"
            >
              First name is required
            </a>
          </li>
          <li>
            <a
              class="text-red-700 underline hover:decoration-2 focus:decoration-2"
              href="#last-name"
            >
              Last name is required
            </a>
          </li>
        </ol>
      </section>
    </div>
  </body>
</html>
`;

exports[`ErrorSummary > renders null when there are no errors > renders-null-when-no-errors 1`] = `
<html>
  <head />
  <body>
    <div />
  </body>
</html>
`;

exports[`FetcherErrorSummary > displays errors from fetcher data > expected html 1`] = `
<div>
  <div>
    <section
      class="my-5 border-4 border-red-600 p-4"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="font-lato text-lg font-semibold"
      >
        There is 1 error
      </h2>
      <ol
        class="mt-1.5 list-decimal space-y-2 pl-7"
      >
        <li>
          <a
            class="text-red-700 underline hover:decoration-2 focus:decoration-2"
            href="#test-field"
          >
            Test error message
          </a>
        </li>
      </ol>
    </section>
    <div
      aria-errormessage="test-error"
      id="test-field"
    >
      Test Field
    </div>
    <div
      id="test-error"
    >
      Test error message
    </div>
  </div>
</div>
`;

exports[`FormErrorSummary > displays errors from form action data > expected html 1`] = `
<div>
  <div>
    <section
      class="my-5 border-4 border-red-600 p-4"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="font-lato text-lg font-semibold"
      >
        There is 1 error
      </h2>
      <ol
        class="mt-1.5 list-decimal space-y-2 pl-7"
      >
        <li>
          <a
            class="text-red-700 underline hover:decoration-2 focus:decoration-2"
            href="#test-field"
          >
            Test error message
          </a>
        </li>
      </ol>
    </section>
    <div
      aria-errormessage="test-error"
      id="test-field"
    >
      Test Field
    </div>
    <div
      id="test-error"
    >
      Test error message
    </div>
  </div>
</div>
`;
